force-app/main/default/objects/ExpoHisImage__c/ExpoHisImage__c.object-meta.xml
<CustomObject>
    <label>ExpoHisImage</label>
    <nameField>
        <label>Title CN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExpoHisImages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>