force-app/main/default/objects/ExpoHisImage__c/fields/CoverImgPublicLink__c.field-meta.xml
<CustomField>
    <fullName>CoverImgPublicLink__c</fullName>
    <label>Link</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>