force-app/main/default/objects/ExpoHisImage__c/fields/TitleCN__c.field-meta.xml
<CustomField>
    <fullName>TitleCN__c</fullName>
    <formula>Name</formula>
    <label>TitleCN Invisible</label>
    <type>Text</type>
</CustomField>