force-app/main/default/objects/ExpoHisImage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExpoId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>