force-app/main/default/objects/ExpoHisImage__c/listViews/X137_Canton_Fair.listView-meta.xml
<ListView>
    <fullName>X137_Canton_Fair</fullName>
    <columns>NAME</columns>
    <columns>ExpoId__c</columns>
    <columns>TitleCN__c</columns>
    <columns>CoverImg__c</columns>
    <columns>CoverImgFileType__c</columns>
    <columns>CoverImgVersionId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpoId__c</field>
        <operation>contains</operation>
        <value>137</value>
    </filters>
    <label>137 Canton Fair</label>
</ListView>